[package]
name = "rtmp"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
minifb = "0.19"
image = "0.23"
bytes = "1"
datetime = "0.5.2"
serde_json = "1.0.120"
log = "0.4.22"
lapin = "2.5.0"
futures = "0.3"
diesel_migrations = "2"